@@ -28,10 +28,7 @@ import site.alice.liveman.utils.HttpRequestUtil;
 
 import javax.annotation.PostConstruct;
 import java.io.IOException;
-import java.net.InetSocketAddress;
-import java.net.Proxy;
-import java.net.URI;
-import java.net.URL;
+import java.net.*;
 import java.nio.charset.StandardCharsets;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
@@ -55,14 +52,14 @@ public class RealityLiveService extends LiveService {
             log.warn(nickname + "的用户信息不存在，请核对！");
             return null;
         }
-        String liveDetailJson = HttpRequestUtil.downloadUrl(new URL("https://media-prod-dot-vlive-prod.appspot.com/api/v1/media/get_from_vlid"), null, "{\"state\":30,\"vlive_id\":\"" + streamUser.getString("vlive_id") + "\"}", StandardCharsets.UTF_8, WEB_PROXY);
+        String liveDetailJson = HttpRequestUtil.downloadUrl(new URI("https://media-prod-dot-vlive-prod.appspot.com/api/v1/media/get_from_vlid"), null, "{\"state\":30,\"vlive_id\":\"" + streamUser.getString("vlive_id") + "\"}", StandardCharsets.UTF_8, WEB_PROXY);
         JSONObject liveDetailObj = JSON.parseObject(liveDetailJson);
         JSONArray lives = liveDetailObj.getJSONArray("payload");
         if (!lives.isEmpty()) {
             JSONObject liveObj = lives.getJSONObject(0);
             String videoId = liveObj.getString("media_id");
             String videoTitle = liveObj.getString("title");
-            URL m3u8ListUrl = new URL(liveObj.getJSONObject("StreamingServer").getString("view_endpoint"));
+            URI m3u8ListUrl = new URI(liveObj.getJSONObject("StreamingServer").getString("view_endpoint"));
             String[] m3u8List = HttpRequestUtil.downloadUrl(m3u8ListUrl, StandardCharsets.UTF_8, null).split("\n");
             String mediaUrl = null;
             for (int i = 0; i < m3u8List.length; i++) {
@@ -74,13 +71,13 @@ public class RealityLiveService extends LiveService {
             if (mediaUrl == null) {
                 mediaUrl = m3u8List[3];
             }
-            return new VideoInfo(channelInfo, videoId, videoTitle, m3u8ListUrl.toURI().resolve(mediaUrl), "m3u8");
+            return new VideoInfo(channelInfo, videoId, videoTitle, m3u8ListUrl.resolve(mediaUrl), "m3u8");
         }
         return null;
     }
 
-    private void refreshStreamUsers() throws IOException {
-        URL officialUsersUrl = new URL("https://user-prod-dot-vlive-prod.appspot.com/api/v1/streamer_users/list_streamer_official");
+    private void refreshStreamUsers() throws IOException, URISyntaxException {
+        URI officialUsersUrl = new URI("https://user-prod-dot-vlive-prod.appspot.com/api/v1/streamer_users/list_streamer_official");
         JSONObject officialUsers = JSON.parseObject(HttpRequestUtil.downloadUrl(officialUsersUrl, null, "{\"official\":\"1\"}", StandardCharsets.UTF_8, WEB_PROXY));
         JSONArray streamerUsers = officialUsers.getJSONObject("payload").getJSONArray("StreamerUsers");
         JSONObject unofficialUsers = JSON.parseObject(HttpRequestUtil.downloadUrl(officialUsersUrl, null, "{\"official\":\"2\"}", StandardCharsets.UTF_8, WEB_PROXY));
